--- a/.gitignore
+++ b/.gitignore
@@ -261,4 +261,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# End of https://www.gitignore.io/api/c++,osx,clion,emacs,clion+all
+# End of https://www.gitignore.io/api/c++,osx,clion,emacs,clion+all:
