--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+dif
 # Created by https://www.gitignore.io/api/c++,osx,clion,emacs,clion+all
 # Edit at https://www.gitignore.io/?templates=c++,osx,clion,emacs,clion+all
 
